# sge-service

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h.in  const.h.in
docs/: stress.lua
example/: CMakeLists.txt  config.ini
example/pyhttp/: CMakeLists.txt  config.ini  wrk.lua
example/pyhttp/src/: entry.c
example/pyhttp/src/pylib/: connection.py  entry.py  http_parser.py  main.py  request.py  response.py
example/pyhttp/src/pylib/model/: base.py  file.py
example/src/: entry.c
example/src/pylib/: entry.py  main.py  request.py  response.py  status.py
src/: config.c  main.c
src/core/: buffer.c  buffer.h  cond.h  config.h  const.h  context.h  dict.c  dict.h  event.c  event.h  list.h  log.c  log.h  module.c  module.h  queue.c  queue.h  ref.h  res_pool.c  res_pool.h  server.h  sge.h  spinlock.h  string.c  string.h  task.h  timer.h
src/event/: epoll.c  event_mgr.c  event_mgr.h  event_pool.c  event_pool.h  io_uring.c
src/event/epoll/: CMakeLists.txt  mgr.c
src/event/io_uring/: CMakeLists.txt  mgr.c
src/module/: module.c  module.h
src/server/: acceptor.c  acceptor.h  cond.c  connection.c  connection.h  server.c  server.h  socket.c  socket.h
src/task/: task.cpp  task.h  task_controller.c  task_mgr.cpp
src/timer/: timer.c
src/utils/: config.c  config.h  futex.c  futex.h
