CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
MESSAGE(STATUS "CMake version: ${CMAKE_VERSION}")

PROJECT(iouring)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF()
MESSAGE(STATUS "Build Type ${CMAKE_BUILD_TYPE}")

SET(LIBURING_SRC_DIR ${CMAKE_SOURCE_DIR}/src/third/liburing)
SET(LIBURING_OUTPUT_DIR ${LIBURING_SRC_DIR}/src)
SET(LIBURING_LIBRARY ${LIBURING_OUTPUT_DIR}/liburing.a)

ADD_CUSTOM_TARGET(build_liburing
    COMMAND chmod +x ./configure
    COMMAND make
    WORKING_DIRECTORY ${LIBURING_SRC_DIR}
    COMMENT "build liburing target"
)

ADD_LIBRARY(liburing STATIC IMPORTED)
SET_PROPERTY(TARGET liburing APPEND PROPERTY IMPORTED_CONFIGURATIONS NOCONFIG)
SET_TARGET_PROPERTIES(liburing PROPERTIES IMPORTED_LOCATION_NOCONFIG "${LIBURING_LIBRARY}")
ADD_DEPENDENCIES(liburing build_liburing)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${LIBURING_OUTPUT_DIR})

SET(SRC
    mgr.c
)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} liburing)

INSTALL(
    TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)
